# ChangeLog for media-plugins/xmms-ladspa
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-ladspa/ChangeLog,v 1.10 2004/09/03 21:32:25 eradicator Exp $

  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-ladspa-0.7.ebuild:
  Stable amd64.

  29 Jun 2004; David Holm <dholm@gentoo.org> xmms-ladspa-0.7.ebuild:
  Added to ~ppc.

  06 May 2004; Danny van Dyk <kugelfang@gentoo.org> xmms-ladspa-0.7.ebuild:
  Marked ~amd64.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-ladspa-0.6.ebuild, xmms-ladspa-0.7.ebuild:
  Stable on x86.  Added explicit IUSE.

*xmms-ladspa-0.7 (02 Feb 2004)

  02 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org> metadata.xml,
  xmms-ladspa-0.7.ebuild:
  Version bump.  Closes bug #40064.

  07 Dec 2003; <spider@gentoo.org> xmms-ladspa-0.6.ebuild:
  removed unnecessary alsa dep

*xmms-ladspa-0.6 (07 Nov 2002)

  07 Nov 2002; Seemant Kulleen <seemant@gentoo.org> xmms-ladspa-0.6.ebuild
  ChangeLog files/digest-xmms-ladspa-0.6 :

  LADSPA plugins for xmms. Submitted by: tobias@databoogie.net (Tobias
  Eichert in bug #9458.