@@ -1,6 +1,8 @@
-MD5 726308adbb15960dd3646f1251e904a4 ChangeLog 1159
+MD5 b3e0fe8e789fe7b67197a6327d65422f ChangeLog 1281
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 MD5 e94a409ed13946ba3ebe7d7e7715b715 xmms-ladspa-0.6.ebuild 701
 MD5 827b4181e3fdd8d319fa86bc8bbf2d06 xmms-ladspa-0.7.ebuild 719
+MD5 65853834dee1fabf19792e76b6489fbe xmms-ladspa-1.0.ebuild 740
 MD5 82b2eb64c80f9ed312d129d8be1a0c4c files/digest-xmms-ladspa-0.6 66
 MD5 152b1464e18cea58b31943baf54b11ad files/digest-xmms-ladspa-0.7 66
+MD5 72c51ab214e80d0d687091c00244d6ca files/digest-xmms-ladspa-1.0 66
